# GenTestsSH

./: .env.example  .gitignore  ADVANCED_EXAMPLES.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FAQ.md  LICENSE  LM_STUDIO_SETUP.md  PROJECT_README.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  START_HERE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
Sources/gen-tests-self-healing/: README.md  setup.py
Sources/src/: README.md
apps/backend/: Dockerfile  pyproject.toml  ui.py
apps/backend/src/application/services/: agents.py  orchestrator.py  workflow.py
apps/backend/src/infrastructure/celery/: app.py  tasks.py
apps/backend/src/infrastructure/config/: config.py  logger.py
apps/backend/src/infrastructure/mcp/: client.py
apps/backend/src/interfaces/http/: api.py
apps/frontend/: Dockerfile  package-lock.json
docs/: ADVANCED_EXAMPLES.md  COMMANDES_UTILISABLES.md  INDEX.md  MULTI_PROJECT_STRUCTURE.md  QUICK_INSTALL.md  QUICK_START.md
examples/: README.md
examples/project-sample-1/: .gitignore
libs/auto-heal-client/: __init__.py  inspect_agent_framework.py  inspect_anthropic.py  inspect_devserver.py  inspect_workflow.py  pyproject.toml
libs/auto-heal-client/framework/: __init__.py  cli.py
libs/auto-heal-client/framework/agents/: agents.py  orchestrator.py
libs/auto-heal-client/framework/core/: client.py  config.py  logger.py  test_runner.py
libs/auto-heal-client/framework/ui/: dev_ui.py
scripts/: execute_all_steps.py  install_and_verify.bat  verify_installation.py
(+42 files in other folders)
