[project]
name = "gen-tests-client"
version = "1.0.0"
description = "Self-healing test automation framework client"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "pytest-asyncio>=0.23.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "structlog>=24.1.0",
    "GitPython>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "gen-tests-shared-models",
    "mcp>=0.1.0"
]

[project.scripts]
auto-heal = "framework.cli:cli"

[tool.uv.sources]
gen-tests-shared-models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
